Update-2 index.html

--- a/index.html
+++ b/index.html
@@ -877,7 +877,11 @@
             class="grid grid-cols-[1fr] grid-rows-3 340:grid-cols-[90px_1fr] 340:grid-rows-2 gap-x-5 340:gap-y-2"
           >
             <figure class="row-span-2 self-center">
-              <img class="w-20 h-20" src="./images/contact-icon-1.png" alt="" />
+              <img
+                class="w-20 h-20"
+                src="https://keerthikumar.imgix.net/contact-icon-1.png"
+                alt=""
+              />
             </figure>
 
             <h6 class="text-accent self-end">Phone</h6>
@@ -888,7 +892,11 @@
             class="grid grid-cols-[1fr] grid-rows-3 340:grid-cols-[90px_1fr] 340:grid-rows-2 gap-x-5 340:gap-y-2"
           >
             <figure class="row-span-2 self-center">
-              <img class="w-20 h-20" src="./images/contact-icon-2.png" alt="" />
+              <img
+                class="w-20 h-20"
+                src="https://keerthikumar.imgix.net/contact-icon-2.png"
+                alt=""
+              />
             </figure>
 
             <h6 class="text-accent self-end">Email(@gmail.com)</h6>
@@ -899,7 +907,11 @@
             class="grid grid-cols-[1fr] grid-rows-3 340:grid-cols-[90px_1fr] 340:grid-rows-2 gap-x-5 340:gap-y-2"
           >
             <figure class="row-span-2 self-center">
-              <img class="w-20 h-20" src="./images/contact-icon-3.png" alt="" />
+              <img
+                class="w-20 h-20"
+                src="https://keerthikumar.imgix.net/contact-icon-3.png"
+                alt=""
+              />
             </figure>
 
             <h6 class="text-accent self-end">Websites</h6>
@@ -910,7 +922,11 @@
             class="grid grid-cols-[1fr] grid-rows-3 340:grid-cols-[90px_1fr] 340:grid-rows-2 gap-x-5 340:gap-y-2"
           >
             <figure class="row-span-2 self-center">
-              <img class="w-20 h-20" src="./images/contact-icon-4.png" alt="" />
+              <img
+                class="w-20 h-20"
+                src="https://keerthikumar.imgix.net/contact-icon-4.png"
+                alt=""
+              />
             </figure>
 
             <h6 class="text-accent self-end">Address</h6>
