--- a/index.html
+++ b/index.html
@@ -161,9 +161,7 @@
         <figure
           class="lg:max-w-[550px] lg:relative lg:before:absolute lg:before:content-[''] lg:before lg:before:border-[20px] lg:before:rounded lg:before:border-accent lg:before:h-[70%] lg:before:w-[70%] lg:before lg:before:bg-transparent lg:before:-top-10 lg:before:-left-10 isolate lg:before:-z-10"
         >
-          <img
-            ix-src="https://keerthikumar.imgix.net/showcase.png?w=2156&h=2156&fm=jpg"
-          />
+          <img src="../images/showcase.png" />
         </figure>
       </section>
     </header>
